--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,4 +1,218 @@
 ---
 layout: default
 ---
+<style>
+.contentContainer {
+  background: #efefef;
+  padding: 20px;
+  max-width: 350px;
+  min-width: 150px;
+  margin: auto;
+  border-radius: 10px;
+  border: solid 5px #dbdbdb;
+}
+
+/*///////////////////////////////////////////////////////
+    // Progress Bars \\ 
+///////////////////////////////////////////////////////*/
+
+.progressBar {
+  margin-bottom: 0.3em;
+}
+
+.progressBar h4 {
+/*  font-size: 1px;
+  font-size: 1.33em;
+  text-transform: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;*/
+  margin-bottom: .005em;
+}
+
+.progressBarContainer {
+  width: 100%;
+  max-width: 350px;
+  height: 1em;
+  background: #e6eae3;
+  background: rgba(100,200,100,.2);
+  overflow: hidden;
+  border-radius: 2px;
+}
+
+.progressBarValue {
+  height: 1.06em;
+  float: left;
+  background: #0866dc;
+  background: rgba(100,200,100,.75);
+}
+
+.value-00 { width: 0; }
+
+.value-10 { width: 10%; }
+
+.value-20 { width: 20%; }
+
+.value-30 { width: 30%; }
+
+.value-40 { width: 40%; }
+
+.value-50 { width: 50%; }
+
+.value-60 { width: 60%; }
+
+.value-70 { width: 70%; }
+
+.value-80 { width: 80%; }
+
+.value-90 { width: 90%; }
+
+.value-100 { width: 100%; }
+</style>
+<article id="about">
+	<figure>
+		<div class="col-50">
+<!-- 			progress bars here
+ -->		<center><h1>Skills</h1></center>
+			<div class="contentContainer">
+			  <div class="progressBar">
+			    <h4>C</h4>
+			    <div class="progressBarContainer">
+			      <div class="progressBarValue value-90"></div>
+			    </div>
+			  </div>
+			  <div class="progressBar">
+			    <h4>Python</h4>
+			    <div class="progressBarContainer">
+			      <div class="progressBarValue value-90"></div>
+			    </div>
+			  </div>
+			  <div class="progressBar">
+			    <h4>SML/NJ</h4>
+			    <div class="progressBarContainer">
+			      <div class="progressBarValue value-80"></div>
+			    </div>
+			  </div>
+			  <div class="progressBar">
+			    <h4>Web</h4>
+			    <div class="progressBarContainer">
+			      <div class="progressBarValue value-70"></div>
+			    </div>
+			  </div>
+			  <div class="progressBar">
+			    <h4>Matlab</h4>
+			    <div class="progressBarContainer">
+			      <div class="progressBarValue value-70"></div>
+			    </div>
+			  </div>
+			  <div class="progressBar">
+			    <h4>Latex</h4>
+			    <div class="progressBarContainer">
+			      <div class="progressBarValue value-70"></div>
+			    </div>
+			  </div>
+			  <div class="progressBar">
+			    <h4>Arduino</h4>
+			    <div class="progressBarContainer">
+			      <div class="progressBarValue value-70"></div>
+			    </div>
+			  </div>
+			  <div class="progressBar">
+			    <h4>Processing</h4>
+			    <div class="progressBarContainer">
+			      <div class="progressBarValue value-60"></div>
+			    </div>
+			  </div>
+			  <div class="progressBar">
+			    <h4>Verilog</h4>
+			    <div class="progressBarContainer">
+			      <div class="progressBarValue value-50"></div>
+			    </div>
+			  </div>
+			  <div class="progressBar">
+			    <h4>JavaScript</h4>
+			    <div class="progressBarContainer">
+			      <div class="progressBarValue value-50"></div>
+			    </div>
+			  </div>
+			  <div class="progressBar">
+			    <h4>x86-64</h4>
+			    <div class="progressBarContainer">
+			      <div class="progressBarValue value-40"></div>
+			    </div>
+			  </div>
+			  <div class="progressBar">
+			    <h4>Solidworks</h4>
+			    <div class="progressBarContainer">
+			      <div class="progressBarValue value-30"></div>
+			    </div>
+			  </div>
+			</div>
+
+		</div>
+
+		<figcaption class="col-50">
+			<h1>{{ page.title | escape }}</h1>
+			<h5>{{ page.caption }}</h5>
+
+			{{ content }}
+
+			<ul class="social-icons">
+
+					<li>
+							<a class="email" href="" itemprop="sameAs" title="Send me an email">
+									<i class="fa fa-fw fa-envelope-o" aria-hidden="true"></i>
+							</a>
+					</li>
+
+					{% if site.linkedin.username %}
+					<li>
+							<a href="https://www.linkedin.com/in/{{ site.linkedin.username }}"
+								itemprop="sameAs" title="Follow me on LinkedIn">
+									<i class="fa fa-fw fa-linkedin-square" aria-hidden="true"></i>
+							</a>
+					</li>
+					{% endif %}
+
+					{% if site.github.username %}
+						<li>
+								<a href="https://github.com/{{ site.github.username }}"
+									itemprop="sameAs" title="Follow me on GitHub">
+										<i class="fa fa-fw fa-github" aria-hidden="true"></i>
+								</a>
+						</li>
+					{% endif %}
+
+					{% if site.flickr.username %}
+						<li>
+								<a href="https://www.flickr.com/photos/{{ site.flickr.username }}/"
+									itemprop="sameAs" title="Connect with me on Flickr">
+										<i class="fa fa-fw fa-flickr" aria-hidden="true"></i>
+								</a>
+						</li>
+					{% endif %}
+
+					{% if site.instagram.username %}
+						<li>
+								<a href="https://www.instagram.com/{{ site.instagram.username }}/"
+									itemprop="sameAs" title="Connect with me on Instagram">
+										<i class="fa fa-fw fa-instagram" aria-hidden="true"></i>
+								</a>
+						</li>
+					{% endif %}
+
+					{% if site.twitter.username %}
+						<li>
+								<a href="https://twitter.com/{{ site.twitter.username }}/"
+									itemprop="sameAs" title="Follow me on Twitter">
+										<i class="fa fa-fw fa-twitter" aria-hidden="true"></i>
+								</a>
+						</li>
+					{% endif %}
+
+			</ul>
+
+		</figcaption>
+	</figure>
+</article>
+
 
